added debug print